--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: red;
+  background-color: ##95a5a6;
 }
 h1 {
 font-family: "Georgia";
@@ -29,3 +29,20 @@ border-radius: 5%;
 border: 1em solid #000;
 text-transform: uppercase;
 }
+#map {
+  height: 400px;
+  width: 80%;
+       }
+ #floating-panel {
+        z-index: 5;
+        background-color: #fff;
+        padding: 5px;
+        border: 1px solid #999;
+        text-align: center;
+        font-family: 'Roboto','sans-serif';
+        line-height: 30px;
+        padding-left: 10px;
+      }
+      #floating-panel {
+        margin-left: -52px;
+      }
